*Empty MediaWiki Message*

--- a/Neo_1973_Battery_Charging_Logic.mw
+++ b/Neo_1973_Battery_Charging_Logic.mw
@@ -1,4 +1,4 @@
-The battery charging logic is embedded into our [[https://wiki.openmoko.org/wiki/Neo1973_Hardware#Power_Management|PCF50606 PMU]] (Power Management Unit).
+The battery charging logic is embedded into our [[Neo1973_Hardware#Power_Management|PCF50606 PMU]] (Power Management Unit).
 
 The PCF50606 suppors a variety of battery charging modes.
 
