--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -2,7 +2,10 @@
 
 The GTA01 uses the [http://u-boot.sourceforge.net/ u-boot] bootloader.
 
-More information on u-boot can be found at [http://www.denx.de/wiki/DULG], [http://www.gumstix.org/tikiwiki/tiki-index.php?page=U-Boot] and [http://linuxdevices.com/articles/AT5085702347.html].
+More information on u-boot can be found at 
+* http://www.denx.de/wiki/DULG
+* http://www.gumstix.org/tikiwiki/tiki-index.php?page=U-Boot
+* http://linuxdevices.com/articles/AT5085702347.html
 
 However, the vanilla u-boot doesn't support many of the features that GTA01 needs, such as
 * Support for boot from NAND flahs using [[S3C2410 Steppingstone]]
