--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -24,8 +24,7 @@ Untar the sources, apply the patch.  run "make gta01bv3_config" (or gta01bv2_con
 
 == Bootloader binary ==
 
-The latest bootloader binary (for NAND) can be found at 
-[http://people.openmoko.org/laforge/src/u-boot/current/u-boot.bin].  It should be written to the NAND flash address 0x00000000 (size 0x30000)
+The latest bootloader binary builds can be found at https://buildhost.openmoko.org/tmp/gta01/deploy/images/ .  It should be written to the NAND flash address 0x00000000 (size 0x30000)
 
 == Bootloader development ==
 
