added 512MB card by Corsair, Kingston, Toshiba, and 1 GB card by vox-fon

--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -21,11 +21,17 @@ At this point, we can recommand Sandisk cards, since they seem to cause the leas
 |-
 | Verbatim || 47225 || 1024MB || || {{no}} || {{yes}}
 |-
+| vox-fon || 1 GB || 1024MB || || {{no}} || {{yes}}
+|-
 | hama || 55371 || 256MB || || {{no}} || {{yes}}
+|-
+| Corsair || CMFSDMICRO-512 || 512MB || || {{no}} || {{yes}}
 |-
 | extreMemory || AE56-1280R || 128MB || || {{no}} || {{yes}}
 |-
 | extreMemory || H256MS05 || 256MB || 60x || {{no}} || {{yes}}
+|-
+| Toshiba || SD-512R2W || 512MB || || {{no}} || {{yes}}
 |-
 | Transcend || TS128MUSD || 128MB || || {{no}} || {{yes}}
 |-
@@ -33,5 +39,9 @@ At this point, we can recommand Sandisk cards, since they seem to cause the leas
 |-
 | Patriot ||  PSF128MCSD-RC || 128MB || ? || {{no}} || ?
 |-
+| Kingston || SD-C512 || 512MB || ? || {{maybe}} || {{yes}}
+|-
 | Kingston || SD-C01G || 1GB || ? || {{yes}} || ?
 |}
+
+The '''maybe''' entry refers to a card that seems to work, but causes u-boot to print a large number of MMC timeout messages.
