--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -39,9 +39,10 @@ At this point, we can recommand Sandisk cards, since they seem to cause the leas
 |-
 | Patriot ||  PSF128MCSD-RC || 128MB || ? || {{no}} || ?
 |-
-| Kingston || SD-C512 || 512MB || ? || {{maybe}} || {{yes}}
+| Kingston || SD-C512 || 512MB || ? || {{no}} || {{yes}}
 |-
 | Kingston || SD-C01G || 1GB || ? || {{yes}} || ?
 |}
 
-The '''maybe''' entry refers to a card that seems to work, but causes u-boot to print a large number of MMC timeout messages.
+Note that cards with a '''no''' may still work at times, but that we just have found their behaviour too erratic to consider acceptable.
+(Also note that this is a bug in u-boot. The cards are probably fine.)
