double quotes for better readability

--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -44,5 +44,5 @@ At this point, we can recommand Sandisk cards, since they seem to cause the leas
 | Kingston || SD-C01G || 1GB || ? || {{yes}} || ?
 |}
 
-Note that cards with a '''no''' may still work at times, but that we just have found their behaviour too erratic to consider acceptable.
+Note that cards with a "'''no'''" may still work at times, but that we just have found their behaviour too erratic to consider acceptable.
 (Also note that this is a bug in u-boot. The cards are probably fine.)
