minor clarifications and markup work

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -7,9 +7,10 @@ system from scratch.
 
 Do not treat this as a linear script! There are various configuration items you
 need to set (or skip, as it may be), operations that depend on how your
-host(s) are set up, and also on the revision of the target platform.
+host(s) is/are set up, and also on the hardware revision of the target platform
+(i.e., the phone).
 
-Instead, look at each step, read the instructions, and copy and paste what
+Instead, look at each step, read the instructions, copy and paste what
 makes sense for you, and adapt what you disagree with. Links to original and
 background material in the Wiki are included wherever useful.
 
@@ -21,12 +22,12 @@ background material in the Wiki are included wherever useful.
 The build process may spread over multiple machines. They have the following
 roles:
 
-;BUILD: build host, with quick access to the files and CPU power. Must have Internet access.
-;LAB: lab machine connected to the debug board (serial and JTAG) and to USB on the Neo (since this will probably be just a single machine, the roles are not further divided)
-;CARD: machine with a USB-attached SD/MMC card reader
+;'''BUILD''': build host, with quick access to the files and CPU power. Must have Internet access.
+;'''LAB''': lab machine connected to the debug board (serial and JTAG) and to USB on the Neo (since this will probably be just a single machine, the roles are not further divided)
+;'''CARD''': machine with a USB-attached SD/MMC card reader
 
-All machines are assumed to share the same filesystem layout. In the title of
-each of the section below, the respective role is indicated. "('''all''')" is for
+All machines are assumed to share the same filesystem layout. At the beginning of
+each of the sections below, the respective role is indicated. "('''all''')" is for
 settings that apply to all machines, or that - for simplicity - can be
 applied to all of them.
 
@@ -69,7 +70,7 @@ permissions:
 * write access to the OpenMoko SVN repository (in principle, it should be possible to simplify this to read access. For further study.)
 
 
-===  Prerequisites  ===
+===  Build host prerequisites  ===
 '''(Role: BUILD)'''
 
 There must be at least 7 GB of free space on $OMDIR.
@@ -79,13 +80,13 @@ following packages must be installed on the build host:
 
 ;subversion: version control system used by OpenMoko and others
 ;quilt:	patch management system used by the Linux kernel and others
-;monotone: version control system used by OpenEmbedded. Needs a recent version, e.g., 0.32, although also 0.31 should work.
+;monotone: version control system used by OpenEmbedded. This should be a recent version, e.g., 0.32, although also 0.31 should work.
 ;diffstat: the OE build process wants this
 ;texi2html: this too
 ;git: version control system used by the Linux kernel and others. Do not confuse this with the "GNU Interactive Tools"
 
 Furthermore, the following package can be installed optionally:
-;psycho: Python just-in-time compiler. Speeds up BitBake considerably. Strongly recommended.
+;psycho: Python just-in-time compiler. Speeds up OpenEmbedded builds (with BitBake) considerably. Strongly recommended.
 
 Gentoo users can obtain all this with (note that, at the time of writing, Monotone 0.32 isn't available without setting the ~x86 keyword):
 
@@ -108,7 +109,7 @@ chmod +x $HOME/bin/svn
 </pre>
 
 
-===  Prerequisites  ===
+===  Lab host prerequisites  ===
 '''(Role: LAB)'''
 
 The following package must be installed on the 
