--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -34,6 +34,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[OpenMoko#Setting_up_an_OpenMoko_SDK|How to setup the OpenMoko SDK]]
 * [[License]] - How we license our code
 * [[Development resources]] - Describes the resources (lists, svn, ...)
+* [[Wish List https://wiki.openmoko.org/wiki/Wish_List]]
 
 == Getting started with this wiki ==
 
