--- a/License.mw
+++ b/License.mw
@@ -44,7 +44,7 @@ of applications that were entirely and originally developed by the OpenMoko proj
 
 === Libraries: LGPL ===
 
-For all '''native'' libraries, we use the GNU Lesser General Public License (LGPL).
+For all '''native''' libraries, we use the GNU Lesser General Public License (LGPL).
 
 Any extension or contribution that somebody makes (and wants to distribute) has 
 therefore to be released under the exact same license. 
