--- a/License.mw
+++ b/License.mw
@@ -4,7 +4,7 @@ The OpenMoko program uses the following Licenses for its official programs:
 
 === Applications: GPL ===
 
-For all '''native'' applications, we use the GNU General Public License (GPL).
+For all '''native''' applications, we use the GNU General Public License (GPL).
 This means that we commit ourselves to the 'standard' copyleft license which
 covers by far the most Free Software programs today.
 
@@ -40,7 +40,6 @@ of applications that were entirely and originally developed by the OpenMoko proj
  * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 </pre>
-
 
 === Libraries: LGPL ===
 
