corrected incomplete sentence

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -118,12 +118,11 @@ in such cases, e.g.
 ===  Lab host prerequisites  ===
 '''(Role: LAB)'''
 
-The following package must be installed on the 
+The following package must be installed on the lab host:
 ;xc: a simple communications program for the serial port
 
 Gentoo users can obtain this with:
  emerge -u xc
-
 
 ===  Assumptions  ===
 '''(Roles: LAB, CARD)'''
