improved markup, minor edits

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -127,13 +127,12 @@ Gentoo users can obtain this with:
 ===  Assumptions  ===
 '''(Roles: LAB, CARD)'''
 
-There are the following assumptions about hardware setup and devices:
+We make the following assumptions about hardware setup and devices:
 
-* the serial console of the Neo phone is connected to /dev/ttyS0 on LAB [[Debug_Board]]
-* the JTAG [[wiggler]] is connected to /dev/parport0 on LAB. See [[Debug Board]] and  [[Connecting_GTA01Bv2_with_Debug_Board]]
-* cards inserted in the SD/MMC card reader appear as /dev/uba on CARD and can be mounted on /mnt/tmp (we'll specify the mount point explicitly, so it only has to be there, but we don't need /etc/fstab to reflect this). If in doubt,
+* the serial console of the Neo phone is connected to /dev/ttyS0 on '''LAB''' (see [[Debug_Board]])
+* the JTAG [[wiggler]] is connected to /dev/parport0 on '''LAB'''. See [[Debug Board]] and  [[Connecting_GTA01Bv2_with_Debug_Board]]
+* cards inserted in the SD/MMC card reader appear as /dev/uba on '''CARD''' and can be mounted on /mnt/tmp (we'll specify the mount point explicitly, so the directory has to be there, but we don't need to specify the mount point in /etc/fstab). If in doubt,
  mkdir -p /mnt/tmp
-
 
 == Obtaining Sources and build system ==
 
