added that xc isn't the only one that workd

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -124,6 +124,8 @@ The following package must be installed on the lab host:
 Gentoo users can obtain this with:
  emerge -u xc
 
+Note that similar communications programs, such as "cu" or "minicom", may be used as well.
+
 ===  Assumptions  ===
 '''(Roles: LAB, CARD)'''
 
