--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -189,8 +189,8 @@ mtn --db=OE.mtn checkout --branch=org.openembedded.dev \
 
 
 Set up the directories for the cache of upstream files and all material
-related to local builds, then put our configuration file there:
-[[OpenMoko#Setting_up_an_OpenMoko_SDK]]
+related to local builds, then put our configuration file there (see also
+[[OpenMoko#Setting_up_an_OpenMoko_SDK]]):
 
 <pre>
 mkdir -p sources build/conf build/tmp/stamps/armv4t-linux
