moved creation of stamps directory to OE fixes section

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -193,7 +193,7 @@ related to local builds, then put our configuration file there (see also
 [[OpenMoko#Setting_up_an_OpenMoko_SDK]]):
 
 <pre>
-mkdir -p sources build/conf build/tmp/stamps/armv4t-linux
+mkdir -p sources build/conf
 cat <<EOF >build/conf/local.conf
 MACHINE = "fic-gta01"
 DISTRO = "openmoko"
@@ -208,6 +208,7 @@ There are unfortunately some problems in the build process.
 The following fixes work around them:
 
  cd $OMDIR/sources
+ mkdir -p build/tmp/stamps/armv4t-linux
 
 * upstream moves old packages away, gratuitously breaking downstreams
 
