typos, ~ -> $HOME, added pointer to Booting, mention "cu"

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -300,7 +300,8 @@ This will take approximately 12 minutes.
 '''(Role: CARD)'''
 
 There are several ways to provide the Neo with its kernel and the root file
-system. The most self-contained way is to put everything into NAND Flash.
+system. (See [[Bootloader]] for some of them.)
+The most self-contained way is to put everything into NAND Flash.
 To transfer the files to the Neo, we first place them on the microSD card.
 
 Memory cards, including microSD, usually come pre-formatted with VFAT. We
@@ -327,16 +328,17 @@ umount /mnt/tmp
 Now, insert the microSD card into the Neo, but don't power it on yet.
 (If you did anyway, don't worry. We'll power cycle it later.)
 
+
 === Serial console ===
 '''(Role: LAB)'''
 
 We use a serial console connecting through the debug board. This example uses
 "xc", which is a small and simple communications program. Many people prefer
-the considerably more bloated "minicom", which will work as well.
+"cu" or the considerably more bloated "minicom", which will work as well.
 
 * Prepare xc configuration
 <pre>
-cat <<EOF >~/xc.init
+cat <<EOF >$HOME/xc.init
 set bps 115200
 terminal
 EOF
@@ -349,7 +351,7 @@ EOF
 === Start the Neo and enter the boot prompt ===
 '''(Role: LAB)'''
 
-Our first interaction with the target. This this doesn't work, please check
+Our first interaction with the target. If this doesn't work, please check
 that the debug board is connected properly to the serial port.
 
 Disconnect power, wait a couple of minutes, then connect power. You may have
@@ -420,6 +422,7 @@ See also: [[U-boot]]
  GTA01Bv2 # nand write.e 0x32000000 0x00634000 0x15AC000
 
 The last argument is the hex number obtained from "bc"
+
 
 === Configure the boot loader ===
 '''(Role: LAB)'''
