--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -15,6 +15,16 @@ makes sense for you, and adapt what you disagree with. Links to original and
 background material in the Wiki are included wherever useful.
 
 
+{{note|THE INSTRUCTIONS BELOW YIELD A SETUP WITHOUT BAD BLOCK HANDLING}}
+
+We're in the process of migrating to a configuration of u-boot and kernel
+that can skip bad blocks in the NAND Flash. If your NAND Flash has no bad
+blocks, you can proceed safely, and migrate later.
+
+{{note|if your OpenMoko tree is considerably newer than SVN revision 687, even the default kernel may already support bad blocks. The instructions below will then need updating.}}
+
+
+
 == Preparation ==
 
 ===  Roles  ===
@@ -252,17 +262,6 @@ working properly during this test run), and ends with a message like this:
 
  Build statistics:
    Attempted builds: 4
-
-
-{{note|THE INSTRUCTIONS BELOW YIELD A SETUP WITHOUT BAD BLOCK HANDLING}}
-
-We're in the process of migrating to a configuration of u-boot and kernel
-that can skip bad blocks in the NAND Flash. If your NAND Flash has no bad
-blocks, you can proceed safely, and migrate later.
-
-{note|if your OpenMoko tree is considerably newer than SVN revision 687, even
-the default kernel may already support bad blocks. The instructions below
-will then need updating}
 
 
 == Installation ==
