explained structure of name, small corrections

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -271,13 +271,20 @@ working properly during this test run), and ends with a message like this:
 
 As a first step, we transfer the u-boot bootloader into NAND Flash, through
 the JTAG interface. We use JTAG, since this is the most basic way for doing
-this, ensuring that we don't depend on as little to work on the Neo as
+this, ensuring that we only depend on as little to work on the Neo as
 possible.
 
-For this, the u-boot image for to right the board version and the desired
+For this, the u-boot image for the right board version and the desired
 build date must be chosen. E.g., an image built for a gta01bv2 board on
 February 3, 2007 at 13:40:41 would be called
 u-boot_nand-gta01bv2-20070203134041.bin
+
+The name is composed as follows:
+;u-boot: the name of the component
+;nand: it is it be loaded from NAND (not directly from RAM, see also [[Bootloader#Using_JTAG_to_boot_from_RAM]])
+;gta01bv2: the hardware revision of the board
+;20070203134041: the build date and time
+;.bin: this is a binary suitable for flashing/loading
 
 If this is the first build, there will only be one image for each board
 version, thus we can use wildcards. Change the gta01bv2 below to gta01v3 or
@@ -293,7 +300,6 @@ cd $OMDIR/build/tmp/deploy/images
 </pre>
 
 This will take approximately 12 minutes.
-
 
 === Copy kernel and root FS to microSD card ===
 '''(Role: CARD)'''
