clarified power-up and DCD fumbling procedures

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -359,11 +359,12 @@ EOF
 Our first interaction with the target. If this doesn't work, please check
 that the debug board is connected properly to the serial port.
 
-Disconnect power, wait a couple of minutes, then connect power. You may have
-to press the power button on the Neo, next to the USB port, to turn it on.
+Disconnect power and USB from the phone, wait a couple of minutes, then connect power.
+You may have to press and hold the power button on the Neo for a few seconds to turn it on.
+The power button is located next to the USB port.
 
 Some people have observed stability issues if the device was reset without
-power cycling, yet details of what is really happening aren't very clear yet.
+power cycling or if USB was not disconnected when power cycling, yet details of what is really happening aren't very clear yet.
 
 On the serial console, a message like this should appear:
 <pre>
@@ -382,9 +383,9 @@ get out of this situation is to disconnect the serial cable from the debug
 board, run the following command
  while ! stty -F /dev/ttyS0 clocal; do : ; done
 
-stick with something metallic into the connector, and keep on fumbling with
+stick something metallic, e.g., a paper clip or a screwdriver, into the plug on the cable,
+and keep on fumbling with
 it until DCD gets set and the loop above stops spitting out error messages.
-
 
 === Flash kernel and root FS into NAND ===
 '''(Role: LAB)'''
