--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -5,7 +5,7 @@
 
 This is to be the evolving, definitive resource on [[Neo1973]] development -- the GSM+AGPS Smartphone running [[OpenMoko]].  The intention is to collaboratively improve and update all information on this site.
 
-== Sections ==
+== Sections by target audience ==
 
 * [[Basic End-user]] - Information for end users that want basic functionality and no surprises
 * [[Advanced End-user]] - Information for advanced end-users that want advanced and experimental functionality but who are not programmers
