--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -5,6 +5,75 @@
 
 This is to be the evolving, definitive resource on [[Neo1973]] development -- the GSM+AGPS Smartphone running [[OpenMoko]].  The intention is to collaboratively improve and update all information on this site.
 
+== Project Resources ==
+* [[Development resources]] - Describes the resources (lists, svn, ...)
+** [[Development resources#Mailing_Lists|Mailing Lists]]
+** [[Development resources#Wiki|Wiki]]
+** [[Development resources#Bugzilla]]
+** [[Development resources#IRC]]
+** [[Development resources#SVN]]
+
+== Developer's Documentation ==
+
+=== Hands-on Guides ===
+* [[Getting Started with your Neo1973]]
+* [[Building OpenMoko from scratch]]
+* [[Migration to bad block tolerant builds]]
+
+=== Hardware Reference Documentation ===
+
+* [[Neo1973 Hardware]] - Overview about the Components we use, PCB Photographs
+** [[Disassembling Neo1973]] - A photo story about disassembling the hardware
+* [[Debug Board]] - The Debug Board for the Neo1973
+** [[Connecting Neo1973 with Debug Board v2]]
+** [[Debug Board v1]] - The old version of the Debug Board
+*** [[Connecting GTA01Bv2 with Debug Board]] (old, outdated)
+* [[QT2410]] - A S3C2410 development board that we used during early development
+
+=== Software Reference Documentation ===
+
+* Architectural
+** [[OpenMokoFramework]] - The OpenMoko Application Framework
+* Host utilities
+** [[sjf2410-linux]] - a JTAG NAND flashing program, last-resort phone un-bricking
+** [[s3c2410_boot_usb]] - a program for transferring code to the RAM of QT2410 (not Neo1973)
+** [[Toolchain]] - The toolchain we use for compilation
+** [[OpenOCD]] - The On-Chip Debugger we use for development
+** [[OpenEmbedded]] - The distribution building framework
+* Device Software
+** Low-Level
+*** [[u-boot]] - The bootloader we use, including docs to our modifications
+*** [[kernel]] - The Linux Kernel we use, including docs to our modifiations
+** Userspace
+*** [[gsmd]] - the GSM daemon managing the GSM Modem
+*** [[agpsd]] - the AGPS (Assisted GPS) daemon
+*** [[OpenMoko]] - The OpenMoko distribution
+**** [[OpenMoko2007]] - The first intended release of it
+**** [[Userspace root image]]
+
+==== User Interface Related ====
+* [[Look & Feel]]
+* [[Applications]]
+* [[Widgets]]
+** [[Widget Inheritance Graph]]
+
+=== Misc. Development Related ===
+* [[Templates]]
+* [[PIM Storage]]
+* [[Coding Guidelines]]
+* [[How to run OpenMoko Apps on PC]]
+* [[OpenMoko#Setting_up_an_OpenMoko_SDK|How to setup the OpenMoko SDK]]
+* [[License]] - How we license our code
+* [[Development resources]] - Describes the resources (lists, svn, ...)
+
+== Administrative / Organizational ==
+
+* [[Shipping Notes]] - Information to help FIC how to ship products to you
+
+== Miscellaneous ==
+* [[Press Coverage]] - What the press tells about the OpenMoko project
+* [[Wish List]] - A collection of ideas and ideals we'd like to see implemented some day
+
 == Sections by target audience ==
 
 * [[Basic End-user]] - Information for end users that want basic functionality and no surprises
@@ -12,29 +81,6 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Application Developer]] - Information for application developers including ideas and specifications for applications, and tools to build them
 * [[System Developer]] - Information for the system developer including bootloader, kernel, and libraries
 * [[Hardware Developer]] - Information for the hardware developer including hardware specs, and debug board
-
-== Documentation ==
-
-* [[Documentation]] - End-user related documentation
-** [[Getting Started with your Neo1973]]
-** [[Building OpenMoko from scratch]]
-** [[Migration to bad block tolerant builds]]
-
-=== User Interface Related ===
-* [[Look & Feel]]
-* [[Applications]]
-* [[Widgets]]
-
-=== Development Related ===
-* [[Templates]]
-* [[PIM Storage]]
-* [[Coding Guidelines]]
-* [[Widget Inheritance Graph]]
-* [[How to run OpenMoko Apps on PC]]
-* [[OpenMoko#Setting_up_an_OpenMoko_SDK|How to setup the OpenMoko SDK]]
-* [[License]] - How we license our code
-* [[Development resources]] - Describes the resources (lists, svn, ...)
-* [[Wish List]] - What we would like to see eventually
 
 == Getting started with this wiki ==
 
