/* framework-devel@lists.openmoko.org */

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -33,7 +33,7 @@ http://lists.openmoko.org/mailman/listinfo/openmoko-devel
 
 ==== framework-devel@lists.openmoko.org ====
 
-This is a (soon completely public) mailinglist on the OpenMoko Framework
+This is a mailinglist on the OpenMoko Framework
 
 http://lists.openmoko.org/mailman/listinfo/framework-devel
 
