--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -39,7 +39,7 @@ http://lists.openmoko.org/mailman/listinfo/framework-devel
 
 ==== distro-devel@lists.openmoko.org ====
 
-This is a (soon completely public) mailinglist on the OpenMoko Distribution.  Here issues such as ipk packaging related and root fs image related topics should be discussed.  Also, questions regarding the OpenEmbedded based build process go here.
+This is a mailinglist on the OpenMoko Distribution.  Here issues such as ipk packaging related and root fs image related topics should be discussed.  Also, questions regarding the OpenEmbedded based build process go here.
 
 http://lists.openmoko.org/mailman/listinfo/distro-devel
 
