--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -7,6 +7,12 @@ All resources listed here are available to the general public.  Everyone is invi
 
 There are a number of development related mailinglsts at http://lists.openmoko.org/
 
+==== announce@lists.openmoko.org ====
+
+A read-only list where the project does official announcements.  We strongly recommend subscribing to this list if you want to stay up-to-date with the major project achievements.
+
+http://lists.openmoko.org/mailman/listinfo/announce
+
 ==== buglog@lists.openmoko.org ====
 
 A read-only list where every status update to a bug (bugzilla entry) will get posted.  Nice to keep updated on the bug squashing progress
@@ -25,11 +31,11 @@ This is a public mailinglist for discussion of our user + developer community ou
 
 http://lists.openmoko.org/mailman/listinfo/community
 
-==== openmoko-devel@lists.openmoko.org ====
+==== distro-devel@lists.openmoko.org ====
 
-This is a public mailinglist for discussion of developers who want to write code for the Neo1973
+This is a mailinglist on the OpenMoko Distribution.  Here issues such as ipk packaging related and root fs image related topics should be discussed.  Also, questions regarding the OpenEmbedded based build process go here.
 
-http://lists.openmoko.org/mailman/listinfo/openmoko-devel
+http://lists.openmoko.org/mailman/listinfo/distro-devel
 
 ==== framework-devel@lists.openmoko.org ====
 
@@ -37,11 +43,23 @@ This is a mailinglist on the OpenMoko Framework
 
 http://lists.openmoko.org/mailman/listinfo/framework-devel
 
-==== distro-devel@lists.openmoko.org ====
+==== openmoko-devel@lists.openmoko.org ====
 
-This is a mailinglist on the OpenMoko Distribution.  Here issues such as ipk packaging related and root fs image related topics should be discussed.  Also, questions regarding the OpenEmbedded based build process go here.
+This is a public mailinglist for discussion of developers who want to write code for the Neo1973
 
-http://lists.openmoko.org/mailman/listinfo/distro-devel
+http://lists.openmoko.org/mailman/listinfo/openmoko-devel
+
+==== openmoko-users@lists.openmoko.org ====
+
+This is a public mailinglist for discussion among openmoko users. Please do not subscribe and/or start discussions unless you really are a user of OpenMoko software.
+
+http://lists.openmoko.org/mailman/listinfo/openmoko-devel
+
+==== webdesign-commitlog@lists.openmoko.org ====
+
+This is a public read-only mailinglist receiving commit log messages of our web designers. Subscribe to this list if you want to get notified if some of the static content or the templates/skins of our websites change.
+
+http://lists.openmoko.org/mailman/listinfo/webdesign-commitlog
 
 === Wiki ===
 
