/* openmoko-devel@lists.openmoko.org */

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -45,7 +45,7 @@ http://lists.openmoko.org/mailman/listinfo/framework-devel
 
 ==== openmoko-devel@lists.openmoko.org ====
 
-This is a public mailinglist for discussion of developers who want to write code for the Neo1973
+This is a public mailinglist for discussion of "third party" developers who want to write code for the Neo1973
 
 http://lists.openmoko.org/mailman/listinfo/openmoko-devel
 
