/* community@lists.openmoko.org */

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -27,7 +27,9 @@ http://lists.openmoko.org/mailman/listinfo/commitlog
 
 ==== community@lists.openmoko.org ====
 
-This is a public mailinglist for discussion of our user + developer community out there
+This is a public mailinglist for generic discussion of our user + developer community out there.   It acts as a place where people discuss their dreams/wishes/ideas about OpenMoko software and supported hardware, applications, and the like.  It's an area of general talking and chatting.
+
+Please Do not post usage or development questions here.
 
 http://lists.openmoko.org/mailman/listinfo/community
 
