--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -9,25 +9,33 @@ There are a number of development related mailinglsts at http://lists.openmoko.o
 
 ==== announce@lists.openmoko.org ====
 
-A read-only list where the project does official announcements.  We strongly recommend subscribing to this list if you want to stay up-to-date with the major project achievements.
+A read-only list where the project does official announcements.  
+
+We strongly recommend subscribing to this list if you want to stay up-to-date with the major project achievements.
 
 http://lists.openmoko.org/mailman/listinfo/announce
 
 ==== buglog@lists.openmoko.org ====
 
-A read-only list where every status update to a bug (bugzilla entry) will get posted.  Nice to keep updated on the bug squashing progress
+A read-only list where every status update to a bug (bugzilla entry) will get posted.  
+
+Nice to keep updated on the bug squashing progress.
 
 http://lists.openmoko.org/mailman/listinfo/buglog
 
 ==== commitlog@lists.openmoko.org ====
 
-A read-only list where every source code change (commit to the subversion server) gets posted.  Nice to keep posted on development progress.
+A read-only list where every source code change (commit to the subversion server) gets posted.  
+
+Nice to keep posted on development progress.
 
 http://lists.openmoko.org/mailman/listinfo/commitlog
 
 ==== community@lists.openmoko.org ====
 
-This is a public mailinglist for generic discussion of our user + developer community out there.   It acts as a place where people discuss their dreams/wishes/ideas about OpenMoko software and supported hardware, applications, and the like.  It's an area of general talking and chatting.
+This is a public mailinglist for generic discussion of our user + developer community.
+
+It acts as a place where people discuss their dreams/wishes/ideas about OpenMoko software and supported hardware, applications, and the like.  It's an area of general talking and chatting.
 
 Please Do not post usage or development questions here.
 
@@ -35,31 +43,47 @@ http://lists.openmoko.org/mailman/listinfo/community
 
 ==== distro-devel@lists.openmoko.org ====
 
-This is a mailinglist on the OpenMoko Distribution.  Here issues such as ipk packaging related and root fs image related topics should be discussed.  Also, questions regarding the OpenEmbedded based build process go here.
+This is a mailinglist on the OpenMoko Distribution.  
+
+Here issues such as ipk packaging related and root fs image related topics should be discussed.  Also, questions regarding the OpenEmbedded based build process go here.
 
 http://lists.openmoko.org/mailman/listinfo/distro-devel
 
 ==== framework-devel@lists.openmoko.org ====
 
-This is a mailinglist on the OpenMoko Framework
+This is a mailinglist on the OpenMoko Framework.
+
+Please use this list to post questions with regard to the OpenMoko Framework, the API's, their usage, API change requests and the like.
 
 http://lists.openmoko.org/mailman/listinfo/framework-devel
 
+==== openmoko-apps@lists.openmoko.org ====
+
+This is a public mailinglist about the development of the "official" OpenMoko applications, e.g. openmoko-dialer, openmoko-dates, openmoko-contacts, openmoko-mainmenu, openmoko-today.
+
+Pleas do not use this list for issues related to third party applications.
+
 ==== openmoko-devel@lists.openmoko.org ====
 
-This is a public mailinglist for discussion of "third party" developers who want to write code for the Neo1973
+This is a public mailinglist for discussion of development of "third party applications". 
+
+Developers who are writing applications using the OpenMoko framework should join this.
 
 http://lists.openmoko.org/mailman/listinfo/openmoko-devel
 
 ==== openmoko-users@lists.openmoko.org ====
 
-This is a public mailinglist for discussion among openmoko users. Please do not subscribe and/or start discussions unless you really are a user of OpenMoko software.
+This is a public mailinglist for discussion among openmoko users. 
+
+Please do not subscribe and/or start discussions unless you really are a user of OpenMoko software.
 
 http://lists.openmoko.org/mailman/listinfo/openmoko-devel
 
 ==== webdesign-commitlog@lists.openmoko.org ====
 
-This is a public read-only mailinglist receiving commit log messages of our web designers. Subscribe to this list if you want to get notified if some of the static content or the templates/skins of our websites change.
+This is a public read-only mailinglist receiving commit log messages of our web designers. 
+
+Subscribe to this list if you want to get notified if some of the static content or the templates/skins of our websites change.
 
 http://lists.openmoko.org/mailman/listinfo/webdesign-commitlog
 
