changed "building from scratch" link to pre-BTT version, for current users

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -17,7 +17,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 === Hands-on Guides ===
 * [[Getting Started with your Neo1973]]
-* [[Building OpenMoko from scratch]]
+* [[Building OpenMoko from scratch (pre-BBT)]]
 * [[Migration to bad block tolerant builds]]
 
 === Hardware Reference Documentation ===
