/* openmoko-apps@lists.openmoko.org */

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -61,7 +61,9 @@ http://lists.openmoko.org/mailman/listinfo/framework-devel
 
 This is a public mailinglist about the development of the "official" OpenMoko applications, e.g. openmoko-dialer, openmoko-dates, openmoko-contacts, openmoko-mainmenu, openmoko-today.
 
-Pleas do not use this list for issues related to third party applications.
+Please do not use this list for issues related to third party applications.
+
+http://lists.openmoko.org/mailman/listinfo/openmoko-apps/
 
 ==== openmoko-devel@lists.openmoko.org ====
 
