--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -104,9 +104,9 @@ There's a #openmoko channel on irc.freenode.net.
 
 There is a [http://subversion.tigris.org/ Subversion] server available at svn.openmoko.org. 
 
-Read-only access is provided via https://svn.openmoko.org/. You should not normally use this URL, it's mainly for later public access after product release.
+Read-only access is provided via http://svn.openmoko.org/.
 
-Read-write access for developers is provided via https://svn.openmoko.org:2342
+Read-write access for developers is provided via https://svn.openmoko.org/
 
 Web access for occasional browsing is available via http://svnweb.openmoko.org/
 
