--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -9,9 +9,10 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Development resources]] - Describes the resources (lists, svn, ...)
 ** [[Development resources#Mailing_Lists|Mailing Lists]]
 ** [[Development resources#Wiki|Wiki]]
-** [[Development resources#Bugzilla]]
-** [[Development resources#IRC]]
-** [[Development resources#SVN]]
+** [[Development resources#Bugzilla|Bugzilla]]
+** [[Development resources#IRC|IRC]]
+** [[Development resources#SVN|svn + svnweb]]
+** [[Development resources#Projects|projects]]
 
 == Developer's Documentation ==
 
