--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -1,4 +1,3 @@
-
 == Public Resources ==
 
 All resources listed here are available to the general public.  Everyone is invited to participate.
@@ -112,7 +111,7 @@ Web access for occasional browsing is available via http://svnweb.openmoko.org/
 
 If you need help, please read more about [[Using Subversion]].
 
-=== SVN Tree Layout ===
+==== SVN Tree Layout ====
 
 The Subversion (svn) tree is laid out as follows:
 
@@ -146,6 +145,11 @@ The Subversion (svn) tree is laid out as follows:
 **** ...
 *** target
 **** ...
+
+=== Projects ===
+
+at http://projects.openmoko.org/ we have a GForge installation.  Users can use this as hosting service for their contributed applications.
+
 == Internal resources ==
 
 There are some resources which are internal.  This means that they are only available for internal developers of FIC / Openmoko Inc.   The reason they are internal is either because they deal with information under NDA, or about business strategy.  We kindly ask for your understanding that while we really try to be as open as possible, there are some topics which we have to discuss without public
