/* Hardware Reference Documentation */

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -30,6 +30,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 ** [[Debug Board v1]] - The old version of the Debug Board
 *** [[Connecting GTA01Bv2 with Debug Board]] (old, outdated)
 * [[QT2410]] - A S3C2410 development board that we used during early development
+* [[Unresolved Hardware Questions]] For developers to ask questions of those with hardware, or of the designers.
 
 === Software Reference Documentation ===
 
