/* framework-devel@lists.openmoko.org */

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -56,6 +56,12 @@ Please use this list to post questions with regard to the OpenMoko Framework, th
 
 http://lists.openmoko.org/mailman/listinfo/framework-devel
 
+==== gsmd-devel@lists.openmoko.org ====
+
+This is a mailinglist on the OpenMoko gsmd (GSM daemon) and the corresponding libgsmd.
+
+http://lists.openmoko.org/mailman/listinfo/gsmd-devel
+
 ==== openmoko-apps@lists.openmoko.org ====
 
 This is a public mailinglist about the development of the "official" OpenMoko applications, e.g. openmoko-dialer, openmoko-dates, openmoko-contacts, openmoko-mainmenu, openmoko-today.
