*Empty MediaWiki Message*

--- a/Unresolved_Hardware_Questions.mw
+++ b/Unresolved_Hardware_Questions.mw
@@ -1,3 +1,5 @@
+{{note|This page is soon to be removed. A wiki is not a mailinglist}}
+
 = Unresolved Hardware Questions =
 
 Add your question here. Respond either by deleting the question, and updating the appropriate page, or adding the answer after the question, so the questioner can do it.
