*Empty MediaWiki Message*

--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -1,5 +1,6 @@
 [[Image:Gta01b v3 top.jpg|thumb|400px|display (top) side]]
 [[Image:Gta01b v3 bottom.jpg|thumb|400px|component (back) side]]
+[[Neo1973 Hardware More Images]]
 == Main components ==
 === Processor ===
 
