--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -36,6 +36,7 @@ The GSM/GPRS modem is Texas Instruments Calypso based.
 
 * Connected to: S3C2410 UART1 (full-uart, RxD, TxD, CTS, RTS), /dev/ttySAC0 in userspace
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
+* Accessible GPS antenna jack (if battery cover is removed)
 
 ==== CALYPSO digital baseband ====
 
@@ -56,6 +57,7 @@ Hammerhead AGPS from Global Locate.
 * Connected to: S3C2410 UART2 (full-uart, RxD, TxD, CTS, RTS) /dev/ttySAC1 in userspace
 * Driver: Implemented as userspace agps daemon (agpsd)
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
+* Externally-accessible GPS antenna jack
 
 === microSD-Card ===
 
