--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -8,7 +8,7 @@ More information on u-boot can be found at
 * http://linuxdevices.com/articles/AT5085702347.html
 
 However, the vanilla u-boot doesn't support many of the features that GTA01 needs, such as
-* Support for boot from NAND flahs using [[S3C2410 Steppingstone]]
+* Support for boot from NAND flash using [[S3C2410 Steppingstone]]
 * Support for reading kernel/initrd from SD/Transflash
 * Support for S3C2410 NAND flash
 * Support for downloading programs via S3C2410 USB Device Controller
