--- a/How_to_run_OpenMoko_Apps_on_PC.mw
+++ b/How_to_run_OpenMoko_Apps_on_PC.mw
@@ -1,6 +1,7 @@
 ===Install dependencies===
 
 * use aptitude, apt-get, urpmi, or whatever your distro supports
+** Under ubuntu: apt-get install libgtk2.0-dev pulls in everything necessary
 * you will probably need
 ** gtk-dev
 ** pango-dev
