add [bad] picture

--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -1,3 +1,5 @@
+[[Image:Uboot-s3c2410fb.jpg|thumb|300px|u-boot on Neo1973 console]]
+
 == General ==
 
 The GTA01 uses the [http://u-boot.sourceforge.net/ u-boot] bootloader.
