--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -20,13 +20,13 @@ However, the vanilla u-boot doesn't support many of the features that GTA01 need
 
 == Bootloader source code ==
 
-The current bootloader patches can be found at https://svn.openmoko.org/trunk/src/target/u-boot/patches/. 
+The current bootloader patches can be found at http://svn.openmoko.org/trunk/src/target/u-boot/patches/. 
 
 Untar the sources, apply the patch.  run "make gta01bv3_config" (or gta01bv2_config, or whatever hardware revision you have), run "make".  You will get a resulting "u-boot.bin" image, which you can directly flash (either using existing bootloader or [[sjf2410-linux]]) into NAND.
 
 == Bootloader binary ==
 
-The latest bootloader binary builds can be found at https://buildhost.openmoko.org/tmp/gta01/deploy/images/ .  It should be written to the NAND flash address 0x00000000 (size 0x30000)
+The latest bootloader binary builds can be found at http://buildhost.openmoko.org/tmp/gta01/deploy/images/ .  It should be written to the NAND flash address 0x00000000 (size 0x30000)
 
 == Bootloader development ==
 
