--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -72,7 +72,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Shipping Notes]] - Information to help FIC how to ship products to you
 
 == Miscellaneous ==
-* [[Press Coverage]] - What the press tells about the OpenMoko project
+* [[Press Coverage]] - What the press says about the OpenMoko project
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented some day
 
 == Sections by target audience ==
