--- a/Applications.mw
+++ b/Applications.mw
@@ -5,13 +5,13 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 
 
 == General Principles ==
-* All modifications are saved instantenously, there should never be a save command
-* Make sure users can't make interface operation errors, or that the effects are easily reversible, instead of just notifying them us the potential consequences of their actions.
-* When you open a document you should be returned to the place where you were working when you last closed or save it (this is our concepts of sessions).
+* All modifications are saved instantenously, there should never be a save command.
+* Make sure users can't make interface operation errors, or that the effects are easily reversible, instead of just notifying them of the potential consequences of their actions.
+* When you open a document you should be returned to the place where you were working when you last closed or save it (this is our concept of sessions).
 * Label buttons with adjectives, which describe the state of the object affected
 * Designers should seek an efficient monotonous solution to gain benefits, including ease of learning, simplicity of implementation, minimization of documentation, and lowered maintenance costs.
 * Whenever you find yourself specifying an error message, please stop; then redesign the interface so that the condition that generated the error message doesn't arise.
-* Is the user gets no utility from a process, there is no reason to tell them that it is happening.
+* If the user gets no utility from a process, there is no reason to tell them that it is happening.
 
 {{note|Innovation usually happens at the bottom. What we need to do is provide consistent ways to develop and deploy appliations.}}
 
