--- a/Applications.mw
+++ b/Applications.mw
@@ -64,7 +64,7 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 
 == Panel Applications ==
 
-Panel Applications are individual executables residing in the [[Top Panel]]. They're usually indicating a status and offer a pop-up menu. We are not yet sure whether there is enough screen real estate for this huge number of panel applications.
+Panel Applications are individual executables residing in the [[Top Panel]]. They usually indicate their status and offer a pop-up menu. We are not yet sure whether there is enough screen real estate for this huge number of panel applications.
 
 === 0th Phase ===
 * [[GSM & GPRS Connection Status]]
